Fixed (again) stretching of some pages with very large screens

--- a/assets/styles/desktop/console.scss
+++ b/assets/styles/desktop/console.scss
@@ -8,12 +8,13 @@
 // ---------------- //
 main
 {
+	margin: 0 auto 4rem auto;
 	display: grid;
-	padding: 2rem 5%;
+	padding: 2rem;
+	max-width: 1440px;
 	text-align: center;
 	align-items: start;
 	grid-row-gap: 2rem;
-	margin-bottom: 4rem;
 	justify-items: stretch;
 	grid-column-gap: 5%;
 	grid-template-columns: clamp(15rem, 17.5vw, 25rem) 0.75fr 1fr;
